Fix positioning / wrapping of script name box

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,6 +93,7 @@ body, input {
 #script-box {
   margin-left: auto;
   margin-right: 1rem;
+  padding-right: 1rem;
   justify-content: center;
 }
 
@@ -101,7 +102,10 @@ body, input {
   border: #808080 1px solid;
   color: #1a354c;
   overflow: hidden;
-  width: 15rem;
+  width: 100%;
+  margin-right: 1rem;
+  min-width: 10rem;
+  max-width: 15rem;
   background-color: white;
   line-height: 2.5rem;
   max-height: 2.5rem;
@@ -211,10 +215,6 @@ body, input {
 #merge-commands > .label {
   color: #a40000;
   font-weight: bold;
-}
-
-#commands {
-  min-width: 900px;
 }
 
 #commands a {
@@ -372,10 +372,6 @@ a.command:hover {
 
   .blocklyTreeLabel {
     font-size: 12px !important;
-  }
-
-  #commands {
-    min-width: 425px;
   }
 }
 
